# IndusTSLM

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  README.md  contrastive_pretraining.py  curriculum_learning.py  evaluate_contrastive.py  evaluate_qualitative.py  pyproject.toml  train_cott.py
.github/workflows/: publish.yml
cott_docs/: EXPERIMENT_DESIGN.md
demo/huggingface/: 01_test_hf_tsqa.py  02_test_hf_m4.py  03_test_hf_har_cot.py  04_test_hf_sleep_cot.py  05_test_hf_ecg_qa_cot.py
docs/: COTT_EXPERIMENT_DESIGN.md
evaluation/baseline/: common_evaluator.py  evaluate_all.py  evaluate_ecg_qa.py  evaluate_ecg_qa_plot.py  evaluate_har.py  evaluate_har_plot.py  evaluate_pamap.py  evaluate_sleep_cot.py  evaluate_sleep_plot.py  evaluate_tsqa.py  evaluate_tsqa_plot.py  parse_predictions_baseline.py  parse_predictions_tsqa_baseline.py
evaluation/clinician_eval/: create_doctor_eval_dataset.py
evaluation/memory/: get_memory_use.py
evaluation/opentslm/: baseline_parse_predictions.py  get_pamap_cot_predictions.py  parse_predictions.py
evaluation/opentslm/ecg_qa_cot/: parse_ecg_qa_cot_data.py
evaluation/opentslm/sleep/: baseline_parse_sleep_cot_data.py  get_sleep_predictions.py  parse_sleep_cot_data.py
notebooks/: operation_duration_analysis.ipynb  tokenizer_comparison.ipynb
scripts/: batch_helper.py  clean_operations.py  create_doctor_eval_dataset.py  get_memory_use.py  hf_test.py
scripts/evaluation/: evaluate_contrastive.py  evaluate_qualitative.py
scripts/training/: contrastive_pretraining.py  curriculum_learning.py  train_cott.py
src/industslm/: __init__.py  data.py  logger.py  model_config.py
src/industslm/cott/: __init__.py  build.py  cott_dataset.py  cott_model.py  encoders.py  experts.py
src/industslm/model/dual_encoder/: losses.py  text_encoder_wrapper.py  ts_encoder_wrapper.py
src/industslm/model/encoder/: CNNTokenizer.py  TimeSeriesEncoderBase.py  TransformerCNNEncoder.py  TransformerMLPEncoder.py
src/industslm/model/llm/: OpenTSLM.py  OpenTSLMFlamingo.py  OpenTSLMSP.py  TimeSeriesFlamingoWithTrainableEncoder.py  TimeSeriesLLM.py
src/industslm/model/projector/: LinearProjector.py  MLPProjector.py
src/industslm/prompt/: __init__.py  full_prompt.py  prompt.py  prompt_with_answer.py  text_prompt.py  text_time_series_prompt.py
src/industslm/time_series_datasets/: QADataset.py  TSQADataset.py  constants.py  util.py
src/industslm/time_series_datasets/drilling/: DrillingCaptionDataset.py  DrillingCoTDataset.py  DrillingCodeCoTDataset.py  DrillingFullCoTDataset.py  DrillingMCQDataset.py
src/industslm/time_series_datasets/ecg_qa/: ECGQACoTQADataset.py  ECGQADataset.py  README.md  __init__.py  ecgqa_cot_loader.py  ecgqa_loader.py  example_prompt.md  plot_example.py
src/industslm/time_series_datasets/har_cot/: HARAccQADataset.py  HARCoTQADataset.py  har_cot_loader.py
src/industslm/time_series_datasets/m4/: M4QADataset.py  __init__.py  m4_loader.py
src/industslm/time_series_datasets/monash/: MonashDataset.py  MonashSPO2QADataset.py  monash_utils.py
src/industslm/time_series_datasets/pamap2/: BalancedBatchSampler.py  PAMAP2AccQADataset.py  PAMAP2CoTQADataset.py  PAMAP2Dataset.py  pamap2_cot_loader.py  pamap2_loader.py
src/industslm/time_series_datasets/simulation/: SimulationQADataset.py
src/industslm/time_series_datasets/sleep/: SleepEDFCoTQADataset.py  SleepEDFQADataset.py  sleepedf_cot_loader.py
src/industslm/time_series_datasets/ucr/: __init__.py  ucr_loader.py
src/opentslm/cott/: __init__.py  build.py  cott_dataset.py  cott_model.py  decoders.py  encoders.py  experts.py
src/opentslm/model/dual_encoder/: DualEncoder.py  __init__.py  drilling_dataset.py  negative_mining.py  ts_encoder_wrapper.py
src/opentslm/model/llm/: OpenTSLMFlamingo.py
src/opentslm/time_series_datasets/drilling/: DrillingCaptionDataset.py  DrillingCoTDataset.py  DrillingCodeCoTDataset.py  DrillingFullCoTDataset.py  DrillingMCQDataset.py  drilling_loader.py
test/: ecg_qa_cot_test.py  ecg_qa_test.py  eval_EmbedHealthFlamingo.py  har_cot_test.py  m4_loader_test.py  pamap_cot_loader_test.py  sleepedf_cot_loader_test.py  smoke_test.py  test_inference.py  test_medgemma_support.py  test_train_EmbedHealthFlamingo.py  test_train_EmbedHealthSP.py
